--- a/JenkinsFile
+++ b/JenkinsFile
@@ -20,9 +20,9 @@ pipeline {
     }
     post {
 		always {
-			emailext(subject: '构建通知：${PROJECT_NAME} - Build # ${BUILD_NUMBER} -${BUILD_STATUS}!',
+			emailext(subject: '构建通知: ${PROJECT_NAME} - Build # ${BUILD_NUMBER} -${BUILD_STATUS}!',
 				body: '${FILE,path="email.html"}',
-				to: 'xxx@qq.com'
+				to: 'zijian.han6@gmail.com'
 					)
 		}
 	}
