--- a/JenkinsFile
+++ b/JenkinsFile
@@ -21,7 +21,7 @@ pipeline {
     post {
 		always {
 			emailext(subject: '构建通知: ${PROJECT_NAME} - Build # ${BUILD_NUMBER} -${BUILD_STATUS}!',
-				body: '${FILE,path="src/main/email.html"}',
+				body: '${FILE,path="src/main/webapp/email.html"}',
 				to: 'zijian.han6@gmail.com'
 					)
 		}
